addition of a spinner

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </div>
     <div class="entire-container">
     
-        <div class="spinner hidden">
+        <div class="spinner spinner-hidden">
           <p class="svg">LOADING...</p>
         </div>
 
