--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="entire-container">
     
         <div class="spinner spinner-hidden">
-          <p class="svg">LOADING...</p>
+         <img src="assets/images/svg-spinner.svg" alt="spinner" class="svg">
         </div>
 
       <div class="container-grid">
@@ -50,9 +50,9 @@
             </div>
           </div>
           <div class="btm-report-box">
-            <p class="daily interval active">Daily</p>
-            <p class="weekly interval">Weekly</p>
-            <p class="monthly interval">Monthly</p>
+            <button class="daily interval active">Daily</button>
+            <button class="weekly interval">Weekly</button>
+            <button class="monthly interval">Monthly</button>
           </div>
         </div>
         <div class="work-report report">
@@ -99,7 +99,7 @@
                 />
               </div>
               <div class="another-hold">
-                <h2 class="h2">1hrs</h2>
+                <h2 class="h2">1hr</h2>
                 <p class="hrs">Yesterday - 2hrs</p>
               </div>
             </div>
@@ -124,8 +124,8 @@
                 />
               </div>
               <div class="another-hold">
-                <h2 class="h2">0hrs</h2>
-                <p class="hrs">Yesterday - 1hrs</p>
+                <h2 class="h2">0hr</h2>
+                <p class="hrs">Yesterday - 1hr</p>
               </div>
             </div>
           </div>
@@ -149,7 +149,7 @@
                 />
               </div>
               <div class="another-hold">
-                <h2 class="h2">1hrs</h2>
+                <h2 class="h2">1hr</h2>
                 <p class="hrs">Yesterday - 1hrs</p>
               </div>
             </div>
@@ -174,7 +174,7 @@
                 />
               </div>
               <div class="another-hold">
-                <h2 class="h2">1hrs</h2>
+                <h2 class="h2">1hr</h2>
                 <p class="hrs">Yesterday - 3hrs</p>
               </div>
             </div>
@@ -199,8 +199,8 @@
                 />
               </div>
               <div class="another-hold">
-                <h2 class="h2">0hrs</h2>
-                <p class="hrs">Yesterday - 1hrs</p>
+                <h2 class="h2">0hr</h2>
+                <p class="hrs">Yesterday - 1hr</p>
               </div>
             </div>
           </div>
